Bug 423071 - Nothing can be configured in "Text only details" section of widget settings
Summary: Nothing can be configured in "Text only details" section of widget settings
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.19.1
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-06-16 20:18 UTC by Patrick Silva
Modified: 2020-07-09 10:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (28.88 KB, image/png)
2020-06-16 20:18 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-16 20:18:06 UTC
Created attachment 129432 [details]
screenshot

STEPS TO REPRODUCE
1. add any system monitor widget to desktop
2. open its settings window
3. set "Display style" to "Text only" and click on "Apply" button
4. click on "Text only details" section

OBSERVED RESULT
we only see "Text only details" header, nothing can be configured.
See the attached screenshot please.

EXPECTED RESULT
we can configure "Text only" display style

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.1
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-06-19 00:36:47 UTC
That means the page content failed to load. I suspect a packaging issue. There should be an error printed to the terminal if you restart plasmashell and then reproduce the bug. Can you mention it here?
Comment 2 Patrick Silva 2020-06-19 01:38:36 UTC
it's happening on neon unstable too.
Here is terminal output after click on "Apply" button:

file:///usr/share/ksysguard/sensorfaces/org.kde.ksysguard.piechart/contents/ui/PieChart.qml:49: TypeError: Cannot read property 'smoothEnds' of null
file:///usr/share/ksysguard/sensorfaces/org.kde.ksysguard.piechart/contents/ui/PieChart.qml:50: TypeError: Cannot read property 'fromAngle' of null
file:///usr/share/ksysguard/sensorfaces/org.kde.ksysguard.piechart/contents/ui/PieChart.qml:51: TypeError: Cannot read property 'toAngle' of null
file:///usr/share/ksysguard/sensorfaces/org.kde.ksysguard.piechart/contents/ui/PieChart.qml:54: TypeError: Cannot read property 'rangeFrom' of null
file:///usr/share/ksysguard/sensorfaces/org.kde.ksysguard.piechart/contents/ui/PieChart.qml:55: TypeError: Cannot read property 'rangeTo' of null
file:///usr/share/ksysguard/sensorfaces/org.kde.ksysguard.piechart/contents/ui/PieChart.qml:56: TypeError: Cannot read property 'rangeAuto' of null
Comment 3 Nate Graham 2020-06-19 04:58:17 UTC
Thanks, that seems relevant.
Comment 4 Bug Janitor Service 2020-07-08 15:37:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/144
Comment 5 Bug Janitor Service 2020-07-08 15:37:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/41
Comment 6 Marco Martin 2020-07-09 10:35:59 UTC
Git commit 25ef53d3733ecfa998912d0157a33881422a9086 by Marco Martin.
Committed on 08/07/2020 at 15:34.
Pushed by mart into branch 'master'.

delete the face config ui when face gets switched

don't let face config uis linger there when the user switches the face.
also, not all face have a config ui. Don't load anything at all if
not provided by the face.

M  +15   -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/25ef53d3733ecfa998912d0157a33881422a9086
Comment 7 Marco Martin 2020-07-09 10:38:43 UTC
Git commit 5992fb4c2ee5a6ee72432a766e33980529f79ab7 by Marco Martin.
Committed on 09/07/2020 at 10:37.
Pushed by mart into branch 'Plasma/5.19'.

delete the face config ui when face gets switched

don't let face config uis linger there when the user switches the face.
also, not all face have a config ui. Don't load anything at all if
not provided by the face.

M  +15   -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/5992fb4c2ee5a6ee72432a766e33980529f79ab7