delete the face config ui when face gets switched

don't let face config uis linger there when the user switches the face.
also, not all face have a config ui. Don't load anything at all if
not provided by the face.

BUG:423071